--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -57,7 +57,7 @@ jobs:
         with:
           node-version: "18"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
-          cache-dependency-path: $**/package-lock.json
+          cache-dependency-path: "**/package-lock.json"
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
